# etwitt

./: .gitignore  .todo  AUTHORS  COPYING  Makefile  README  build.sh  configure.ac  desktop.edc  desktop.edj  ebird.c  etwitt  etwitt.c  id.eet  phone.edc  phone.edj
data/: Makefile.am
data/theme/: Makefile.am  phone.edc  phone_new.edc
data/theme/phone/: Makefile.am  phone.edc  phone_new.edc
data/theme/phone/widgets/: button.edc  entry.edc  genlist.edc  scroller.edc  segment_control.edc  toolbar.edc
src/: Makefile.am
src/lib/: Ebird.h  Makefile.am  ebird.c  ebird.h  ebird_private.h
